# halo

./: .gitignore  README.md  flake.nix
.github/actions/check-all/: action.yaml
.github/workflows/: build-pdfs.yml  check-all-reusable.yml  check-crates.yml  check-documents.yml  deploy-website.yml  lint.yml  test.yml
.helix/: languages.toml
accumulation/code/: Cargo.toml  build.rs
accumulation/code/benches/: acc.rs  bench.rs  h.rs  pcdl.rs
accumulation/code/src/: acc.rs  archive.rs  consts.rs  group.rs  lib.rs  main.rs  pcdl.rs  pedersen.rs  pp.rs  wrappers.rs
accumulation/report/: flake.nix  report.md
crates/: Cargo.toml  default.nix  flake.nix
crates/00-kirk/arith/: Cargo.toml
crates/00-kirk/arith/benches/: bench.rs  misc.rs  protocol.rs
crates/00-kirk/arith/src/: circuit_spec.rs  lib.rs  main.rs  trace.rs  trace_builder.rs  utils.rs
crates/00-kirk/arith/src/circuit/: circuit_spec.rs  trace.rs  trace_builder.rs
crates/00-kirk/arith/src/expr/: mod.rs
crates/00-kirk/arith/src/frontend/: curve.rs  field.rs  mod.rs
crates/00-kirk/arith/src/frontend/asdl/: mod.rs
crates/00-kirk/arith/src/frontend/pcdl/: mod.rs
crates/00-kirk/arith/src/frontend/plonk/: mod.rs
crates/00-kirk/arith/src/frontend/poseidon/: inner_sponge.rs  mod.rs  outer_sponge.rs
crates/00-kirk/arith/src/frontend/primitives/: bool.rs  curve.rs  field.rs
crates/00-kirk/arith/src/frontend/signature/: mod.rs
crates/00-kirk/arith/src/plonk/: misc_protocols.rs  mod.rs  protocol.rs
crates/_ecdsa/: Cargo.toml  flake.nix  readme.md
crates/accumulation/: Cargo.toml
crates/accumulation/benches/: acc.rs  bench.rs  pcdl.rs
crates/accumulation/src/: acc.rs  lib.rs  main.rs  pcdl.rs  pedersen.rs
crates/ecdsa/src/: lib.rs
crates/group/: Cargo.toml  build.rs  flake.nix
crates/group/src/: group.rs  lib.rs  main.rs  poly.rs  poseidon_consts.rs  pp.rs  wrappers.rs
crates/plonk/: Cargo.toml  README.md  flake.nix
crates/plonk/benches/: bench.rs
crates/plonk/src/: circuit.rs  coset.rs  lib.rs  main.rs
crates/poseidon/: Cargo.toml  flake.nix
crates/poseidon/src/: constants.rs  inner_sponge.rs  lib.rs  outer_sponge.rs
crates/poseidon/test-vectors/: kimchi-vecs.json
crates/schnorr/: Cargo.toml  flake.nix
crates/schnorr/src/: lib.rs
documents/: .cspell.json
documents/plonk/: flake.nix
documents/presentations/rasmus/: default.nix  slides.md
documents/project-contract/: .cspell.json  contract.md  default.nix
documents/slides/: default.nix  header.tex  slides.md
documents/slides/rasmus/: header.tex  slides.md
documents/thesis/: .cspell.json  bibliography.bib  default.nix  flake.nix  header.tex  metadata.yaml  thesis.md
documents/thesis/01-introduction/: index.md
documents/thesis/02-prerequisites/: index.md
documents/thesis/03-chain-of-signatures/: 01-index.md  index.md
documents/thesis/03-pcdl/: index.md
documents/thesis/03-plonk/: 01-index.md  02-arguments.md  (+3 more)
plonk/code/: Cargo.toml  README.md  flake.nix
plonk/code/benches/: bench.rs
plonk/code/src/: circuit.rs  coset.rs  lib.rs  main.rs  pcs.rs  scheme.rs  util.rs
plonk/code/src/arithmetizer/: arith_wire.rs  errors.rs  mod.rs  synthesize.rs
plonk/code/src/arithmetizer/cache/: commutative_set.rs  errors.rs  mod.rs
plonk/code/src/arithmetizer/plookup/: compute.rs  mod.rs  plookupops.rs
plonk/code/src/arithmetizer/plookup/opsets/: binxoror.rs  empty.rs
plonk/code/src/arithmetizer/trace/: constraints.rs  display.rs  eq.rs  errors.rs  intos.rs  mod.rs  pos.rs  value.rs
plonk/code/src/arithmetizer/wire/: ast.rs  mod.rs  op_i32.rs  op_i64.rs  op_scalar.rs  op_u32.rs  op_u64.rs  op_wire.rs  witness.rs
plonk/code/src/curve/: coset.rs  mod.rs
plonk/code/src/curve/coset/: display.rs  mod.rs  poly.rs
plonk/code/src/curve/point/: mod.rs  op_i32.rs  op_i64.rs  op_pallas_scalar.rs  op_scalar.rs  op_u32.rs  op_u64.rs  op_usize.rs
plonk/code/src/curve/poly/: mod.rs  op_i32.rs  op_i64.rs  op_pallas_scalar.rs  op_poly.rs  op_scalar.rs  op_u32.rs  op_u64.rs  op_usize.rs
plonk/code/src/curve/scalar/: mod.rs  op_i32.rs  op_i64.rs  op_scalar.rs  op_u32.rs  op_u64.rs  op_usize.rs
plonk/code/src/gadgets/: mod.rs  poseidon.rs  tester.rs
plonk/code/src/plonk/: circuit_abstract.rs  circuit_print.rs  circuit_protocol.rs  circuit_snark.rs  circuit_wire.rs  mod.rs  transcript.rs  utils.rs
plonk/code/src/protocol/: circuit.rs  grandproduct.rs  mod.rs  pi.rs  proof.rs  scheme.rs  transcript.rs  verify.rs
plonk/code/src/protocol/arithmetizer/: arith_wire.rs  errors.rs  mod.rs  synthesize.rs
plonk/code/src/protocol/arithmetizer/cache/: commutative_set.rs  errors.rs  mod.rs
plonk/code/src/protocol/arithmetizer/plonkup/: mod.rs
plonk/code/src/protocol/arithmetizer/plookup/: compute.rs  mod.rs
plonk/code/src/protocol/arithmetizer/trace/: constraints.rs  display.rs  eq.rs  errors.rs  intos.rs  mod.rs  pos.rs  value.rs
plonk/code/src/protocol/arithmetizer/wire/: ast.rs  mod.rs  op_i32.rs  op_i64.rs  op_scalar.rs  op_u32.rs  op_u64.rs  op_usize.rs  op_wire.rs
plonk/code/src/protocol/coset/: display.rs  mod.rs  poly.rs
plonk/code/src/protocol/plonk/: mod.rs  pi.rs  proof.rs  transcript.rs  verify.rs
plonk/code/src/protocol/plonk/instance/: many.rs  mod.rs
plonk/code/src/protocol/plonk/pcdl/: many.rs  mod.rs
plonk/code/src/scheme/: enums.rs  eqns.rs  mod.rs
plonk/code/src/util/: misc.rs  mod.rs  poly.rs  print_table.rs  scalar.rs
plonk/code/src/utils/: general.rs  misc.rs  mod.rs  poly.rs  print_table.rs  scalar.rs
plonk/report/: header.tex
project-contract/: flake.nix  project-contract.md
thesis/: flake.nix  header.tex  thesis.md  thesis.md.bak
(+102 files in other folders)
