[package]
name = "halo-accumulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false

[dependencies]
anyhow = "1"
ark-ec = "0.5"
ark-ff = "0.5"
ark-pallas = "0.5"
ark-poly = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
bincode = "2.0.0-rc.3"
rand = "0.8"
rayon = "1.10.0"
sha3 = "0.10"

[build-dependencies]
anyhow = "1.0"

[features]
default = ["parallel"]  # Enable parallelism by default
parallel = []    # Parallel feature depends on Rayon
bootstrap = []
