[package]
name = "halo-group"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5"

[dependencies]
anyhow = "1"
ark-ec = { features = [ "parallel" ], version = "0.5" }
ark-pallas = "0.5"
ark-poly = { features = [ "parallel" ], version = "0.5" }
ark-serialize = { features = [ "parallel" ], version = "0.5" }
ark-ff = { features = [ "parallel" ], version = "0.5" }
ark-std = { features = [ "parallel" ], version = "0.5" }
ark-vesta = "0.5"
bincode = "2.0.0-rc.3"
educe = "0.6.0"
rand = "0.8"
rayon = "1.10.0"
sha3 = "0.10.8"
derivative = "2.2.0"

[build-dependencies]
anyhow = "1"

[features]
bootstrap = []
