[package]
name = "plonk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
log = "0.4"
env_logger = "0.11.6"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.14"
num-integer = "0.1.44"
ark-ff = "0.5.0"
ark-ed25519 = "0.5.0"
ark-std = "0.5.0"
ascii_table = "4.0.5"
bimap = "0.6.3"
ark-bw6-761 = "0.5.0"
field-matrix-utils = "0.1.1"
ark-bls12-381 = "0.5.0"
itertools = "0.14.0"
halo-accumulation = { git = "https://github.com/rasmus-kirk/halo-accumulation" }
ark-pallas = "0.5.0"
ark-poly = "0.5.0"
merlin = "3.0.0"
ark-serialize = "0.5.0"

[lints.clippy]
suspicious_arithmetic_impl = "allow"