[package]
name = "arith"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
petgraph = "0.8.2"
halo-group = { path = "../../group" }
halo-accumulation = { path = "../../accumulation" }
halo-poseidon = { path = "../../poseidon" }
union-find = "0.4.3"
derivative = "2.2.0"
log = "0.4.27"
env_logger = "0.11.8"
rayon = "1.10.0"
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
